<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/padc_linkedin"
            android:checked="true"
            android:icon="@drawable/ic_move_to_inbox_black_24dp"
            android:title="@string/left_menu_linkedin"
            />

        <item
            android:id="@+id/padc_jobsearch"
            android:icon="@drawable/ic_send_black_24dp"
            android:title="@string/left_menu_jobsearch"/>

        <item
            android:id="@+id/drawer_pulse"
            android:icon="@drawable/ic_delete_black_24dp"
            android:title="@string/pulse"/>

        <item
            android:id="@+id/padc_flim"
            android:icon="@drawable/ic_report_black_24dp"
            android:title="@string/padc_film"/>

        <item
            android:id="@+id/padc_winzin"
            android:icon="@drawable/ic_forum_black_24dp"
            android:title="@string/padc_winzin"/>

    </group>
</menu>