<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#897979">
    <LinearLayout
        android:id="@+id/linear_upperblock"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="0.7"
        android:layout_margin="15dp"
        android:background="#FFF">
        <ImageView
            android:id="@+id/iv_notification"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="15dp"
            android:src="@drawable/ic_notifications_black_24dp"/>
        <Switch
            android:id="@+id/switch_jobalert"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:paddingTop="15dp"
            android:text="@string/jobalert"
            android:layout_marginTop="8dp"/>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp">
        <LinearLayout
            android:id="@+id/linear_stdchartered"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#FFF">
            <ImageView
                android:id="@+id/iv_std"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/standard_chartered"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"/>
            <RelativeLayout
                android:id="@+id/relative_stdtext"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginTop="5dp"
                android:paddingLeft="5dp"
                >
                <TextView
                    android:id="@+id/tv_firstline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jobsearchstdfirstline"
                    android:paddingTop="5dp"/>
                <TextView
                    android:id="@+id/tv_secondline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:layout_below="@id/tv_firstline"
                    android:text="@string/jobsearchstdsecondline"/>
                <TextView
                    android:id="@+id/tv_thirdline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:layout_below="@id/tv_secondline"
                    android:text="@string/jobsearchcountry"/>
                <ImageView
                    android:id="@+id/iv_stdline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_thirdline"
                    android:layout_marginLeft="-50dp"
                    android:src="@drawable/ic_remove_black_24dp1"/>
            </RelativeLayout>
            <Button
                android:id="@+id/btn_new"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/btn_bg"
                android:text="@string/btn_new"
                android:textColor="#FFF"/>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_fb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/linear_stdchartered"
            android:background="#FFF">
            <ImageView
                android:id="@+id/iv_fbicon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/fb"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"/>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginTop="5dp"
                android:paddingLeft="5dp"
                >
                <TextView
                    android:id="@+id/tv_fbfirstline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fbfirstline"
                    android:paddingTop="5dp"/>
                <TextView
                    android:id="@+id/tv_fbsecondline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:layout_below="@id/tv_fbfirstline"
                    android:text="@string/fbsecondline"/>
                <TextView
                    android:id="@+id/tv_fbthirdline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:layout_below="@id/tv_fbsecondline"
                    android:text="@string/jobsearchcountry"/>
                <ImageView
                    android:id="@+id/iv_fbline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_fbthirdline"
                    android:layout_marginLeft="-50dp"
                    android:src="@drawable/ic_remove_black_24dp1"/>
            </RelativeLayout>
            <TextView
                android:id="@+id/tv_fb_hr"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:text="@string/jobsearch3w" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_sap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/linear_fb"
            android:background="#FFF">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/sap"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"/>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginTop="5dp"
                android:paddingLeft="5dp"
                >
                <TextView
                    android:id="@+id/tv_sapfirstline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sapfirstline"
                    android:paddingTop="5dp"/>
                <TextView
                    android:id="@+id/tv_sapsecondline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:layout_below="@id/tv_sapfirstline"
                    android:text="@string/sapsecondline"/>
                <TextView
                    android:id="@+id/tv_sapthirdline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:layout_below="@id/tv_sapsecondline"
                    android:text="@string/sapthirdline"/>
                <ImageView
                    android:id="@+id/iv_sapline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_sapthirdline"
                    android:layout_marginLeft="-50dp"
                    android:src="@drawable/ic_remove_black_24dp1"/>
            </RelativeLayout>
            <TextView
                android:id="@+id/tv_saphr"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:text="@string/jobsearch3w" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_cloud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/linear_sap"
            android:background="#FFF">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/saleforce"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"/>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginTop="5dp"
                android:paddingLeft="5dp"
                >
                <TextView
                    android:id="@+id/tv_cloudfirstline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cloudfirstline"
                    android:paddingTop="5dp"/>
                <TextView
                    android:id="@+id/tv_cloudsecondline"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:paddingTop="5dp"
                    android:layout_below="@id/tv_cloudfirstline"
                    android:text="@string/tv_cloudsecondline"/>

            </RelativeLayout>
            <TextView
                android:id="@+id/tv_cloudhr"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="10dp"
                android:paddingLeft="20dp"
                android:text="@string/jobsearch1hr" />

        </LinearLayout>

    </RelativeLayout>
</LinearLayout>