<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#b6afaf">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/images"
        android:scaleType="centerCrop" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        android:paddingTop="@dimen/status_bar_height"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/linear_profile"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:paddingTop="20dp"
                android:theme="@style/ThemeOverlay.AppCompat.Dark">
                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/background_with_shadow">
                    <ImageView
                        android:id="@+id/iv_editimg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_edit_black_24dp"
                        android:layout_alignParentRight="true"/>
                    <TextView
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:textColor="#000"
                        android:paddingTop="10dp"
                        android:layout_below="@id/iv_editimg"
                        android:textAlignment="center"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/name"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

                    <TextView
                        android:id="@+id/career"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="#000"
                        android:layout_below="@id/name"
                        android:textAlignment="center"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/career"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

                    <TextView
                        android:id="@+id/company"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:textColor="#000"
                        android:layout_below="@id/career"
                        android:textAlignment="center"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/company"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

                    <TextView
                        android:id="@+id/profile"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:textColor="#000"
                        android:layout_below="@id/company"
                        android:textAlignment="center"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/profile"
                        android:textSize="12dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_middle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/linear_profile"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                >
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#FFF">
                    <TextView
                        android:id="@+id/tv_profileviewcount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:fontFamily="sans-serif-light"
                        android:paddingTop="15dp"
                        android:text="@string/profileviewcount"/>
                    <TextView
                        android:id="@+id/tv_profileviewtext"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:fontFamily="sans-serif-light"
                        android:layout_below="@id/tv_profileviewcount"
                        android:text="@string/leftbox_text"
                        />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#FFF">
                    <TextView
                        android:id="@+id/tv_profileshare"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:fontFamily="sans-serif-light"
                        android:paddingTop="15dp"
                        android:text="37"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:fontFamily="sans-serif-light"
                        android:layout_below="@id/tv_profileshare"
                        android:text="@string/righttbox_text"

                        />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_with_shadow"
                android:layout_below="@id/linear_middle"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_alignParentBottom="true"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/iv_close"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="5dp"
                        android:src="@drawable/ic_clear_black_24dp"
                        android:layout_alignParentRight="true"/>
                    <TextView
                        android:id="@+id/tv_strength"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="@dimen/margin_medium_2"
                        android:paddingLeft="@dimen/margin_medium_2"
                        android:fontFamily="sans-serif-light"
                        android:text="@string/strength"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_below="@id/tv_strength">
                        <ImageView
                            android:id="@+id/iv_strengthimg"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingTop="10dp"
                            android:src="@drawable/ic_details_black_24dp"
                            android:layout_below="@id/tv_strength"
                            />
                        <TextView
                            android:id="@+id/tv_strengthdesc"
                            android:layout_width="0dp"
                            android:layout_height="48dp"
                            android:layout_weight="2"
                            android:layout_below="@id/tv_strength"
                            android:paddingLeft="@dimen/margin_large"
                            android:paddingTop="@dimen/margin_medium"
                            android:textSize="12dp"
                            android:fontFamily="sans-serif-light"
                            android:text="@string/showcase"/>
                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>
            <ImageView
                android:id="@+id/avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:elevation="2dp"
                android:background="@drawable/img"/>
        </RelativeLayout>
    </ScrollView>


    <ImageView
        android:id="@+id/iv_lindedinbrightness"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:paddingRight="@dimen/margin_medium"
        android:paddingTop="@dimen/margin_medium"
        android:src="@drawable/ic_brightness_high_black_24dp"/>

</RelativeLayout>
<!--</RelativeLayout>-->